--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     -->
   </head>
   <body>
-    <span id="root"></span>
+    <div id="app"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
